@@ -16,19 +16,11 @@
  */
 package demetra.desktop.ui.calendar.actions;
 
-import com.google.common.collect.ImmutableList;
 import demetra.desktop.Config;
+import demetra.desktop.Converter;
 import demetra.desktop.interchange.Importable;
 import demetra.desktop.interchange.InterchangeManager;
 import demetra.desktop.nodes.SingleNodeAction;
-import javax.swing.JMenuItem;
-import org.openide.awt.ActionID;
-import org.openide.awt.ActionReference;
-import org.openide.awt.ActionReferences;
-import org.openide.awt.ActionRegistration;
-import org.openide.util.NbBundle.Messages;
-import org.openide.util.actions.Presenter;
-import demetra.desktop.Converter;
 import demetra.desktop.workspace.CalendarDocumentManager;
 import demetra.desktop.workspace.Workspace;
 import demetra.desktop.workspace.WorkspaceFactory;
@@ -36,6 +28,15 @@ import demetra.desktop.workspace.WorkspaceItem;
 import demetra.desktop.workspace.nodes.ItemWsNode;
 import demetra.timeseries.calendars.CalendarDefinition;
 import demetra.timeseries.regression.ModellingContext;
+import org.openide.awt.ActionID;
+import org.openide.awt.ActionReference;
+import org.openide.awt.ActionReferences;
+import org.openide.awt.ActionRegistration;
+import org.openide.util.NbBundle.Messages;
+import org.openide.util.actions.Presenter;
+
+import javax.swing.*;
+import java.util.List;
 
 /**
  *
@@ -50,7 +51,7 @@ import demetra.timeseries.regression.ModellingContext;
 public final class ImportCalendarAction extends SingleNodeAction<ItemWsNode> implements Presenter.Popup {
 
     private static final Converter<Config, CalendarDefinition> CONVERTER = new CalendarConfig().reverse();
-    private static final ImmutableList<Importable> IMPORTABLES = ImmutableList.of(new ImportableCalendar());
+    private static final List<Importable> IMPORTABLES = List.of(new ImportableCalendar());
 
     public ImportCalendarAction() {
         super(ItemWsNode.class);
